--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,7 @@ CarND-Transfer-Learning-Lab/inception_cifar10_100_bottleneck_features_train.p
 old-testing-file-py-backups/
 run*/
 videos/
+p4-CarND-Advanced-Lane-Lines/1702.06683.pdf
+p4-CarND-Advanced-Lane-Lines/methods/attempt1_challenge_video.mp4
+p4-CarND-Advanced-Lane-Lines/C5UlNUWUEAAKfg7.jpg-large
+p4-CarND-Advanced-Lane-Lines/methods/AAOUTproject_video.mp4
