Update documentation and small bug fixes

--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,11 @@ p4-CarND-Advanced-Lane-Lines/1702.06683.pdf
 p4-CarND-Advanced-Lane-Lines/methods/attempt1_challenge_video.mp4
 p4-CarND-Advanced-Lane-Lines/C5UlNUWUEAAKfg7.jpg-large
 p4-CarND-Advanced-Lane-Lines/methods/AAOUTproject_video.mp4
+processed_images - Copy/
+processed_images/
+p4-CarND-Advanced-Lane-Lines/test_images/
+p4-CarND-Advanced-Lane-Lines/test_images/processed_images/straight_lines1_processed.jpg
+p4-CarND-Advanced-Lane-Lines/methods/attempt1_harder_challenge_video.mp4
+p4-CarND-Advanced-Lane-Lines/methods/attempt2_project_video.mp4
+p4-CarND-Advanced-Lane-Lines/methods/attempt3_project_video.mp4
+p4-CarND-Advanced-Lane-Lines/methods/attempt_test_project_video.mp4
