--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,5 @@ p4-CarND-Advanced-Lane-Lines/methods/attempt1_harder_challenge_video.mp4
 p4-CarND-Advanced-Lane-Lines/methods/attempt2_project_video.mp4
 p4-CarND-Advanced-Lane-Lines/methods/attempt3_project_video.mp4
 p4-CarND-Advanced-Lane-Lines/methods/attempt_test_project_video.mp4
+testing_videos/
+p4-CarND-Advanced-Lane-Lines/submissions/p4-advanced-lane-finding-anthony.zip
