--- a/.gitignore
+++ b/.gitignore
@@ -110,7 +110,6 @@ p4-CarND-Advanced-Lane-Lines/methods/attempt1_challenge_video.mp4
 p4-CarND-Advanced-Lane-Lines/C5UlNUWUEAAKfg7.jpg-large
 p4-CarND-Advanced-Lane-Lines/methods/AAOUTproject_video.mp4
 processed_images - Copy/
-p4-CarND-Advanced-Lane-Lines/test_images/
 p4-CarND-Advanced-Lane-Lines/test_images/processed_images/straight_lines1_processed.jpg
 p4-CarND-Advanced-Lane-Lines/methods/attempt1_harder_challenge_video.mp4
 p4-CarND-Advanced-Lane-Lines/methods/attempt2_project_video.mp4
@@ -118,3 +117,5 @@ p4-CarND-Advanced-Lane-Lines/methods/attempt3_project_video.mp4
 p4-CarND-Advanced-Lane-Lines/methods/attempt_test_project_video.mp4
 testing_videos/
 p4-CarND-Advanced-Lane-Lines/submissions/p4-advanced-lane-finding-anthony.zip
+p4-CarND-Advanced-Lane-Lines/submissions/p4-advanced-lane-finding-v2-.zip
+p4-CarND-Advanced-Lane-Lines/test_images/processed_images/Thumbs.db
