--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,5 @@ git-ignore/
 submissions/
 *.pickle
 test_videos/
+p5-car-detection/anthony-p5-v2.zip
+p5-car-detection/project/methods/processImage.py
