--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,4 @@ p5-car-detection/anthony-p5-v2.zip
 p5-car-detection/project/methods/processImage.py
 .vs
 ignore-submissions
+p6-Extended-Kalman-Filter/kalman_tracker_windows/kalman_tracker_Data/output_log.txt
