--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,4 @@ ignore-submissions
 p6-Extended-Kalman-Filter/kalman_tracker_windows/kalman_tracker_Data/output_log.txt
 p6-Extended-Kalman-Filter/data_out.txt
 p6-Extended-Kalman-Filter/data_in.txt
+term2_sim_windows
