--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,4 @@ p6-Extended-Kalman-Filter/data_in.txt
 term2_sim_windows
 p9-pid-control/Thumbs.db
 p9-pid-control/pid_control_document.pdf
+p2-Traffic-Sign-Classifier/codes
