--- a/p-11-path-planning/CMakeLists.txt
+++ b/p-11-path-planning/CMakeLists.txt
@@ -4,6 +4,7 @@ cmake_minimum_required (VERSION 3.5)
 
 add_definitions(-std=c++11)
 
+set(CXX_FLAGS "-W2")
 set(CMAKE_CXX_FLAGS, "${CXX_FLAGS}")
 
 
