work in progress

--- a/p-11-path-planning/CMakeLists.txt
+++ b/p-11-path-planning/CMakeLists.txt
@@ -4,14 +4,14 @@ cmake_minimum_required (VERSION 3.5)
 
 add_definitions(-std=c++11)
 
-set(CXX_FLAGS "-W2")
+set(CXX_FLAGS "-W1")
 set(CMAKE_CXX_FLAGS, "${CXX_FLAGS}")
 
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
     
     set_source_files_properties(${sources} PROPERTIES COMPILE_FLAGS "-D_USE_MATH_DEFINES")
-	set(sources src/main.cpp src/uWS/Extensions.cpp src/uWS/Group.cpp src/uWS/WebSocketImpl.cpp src/uWS/Networking.cpp src/uWS/Hub.cpp src/uWS/Node.cpp src/uWS/WebSocket.cpp src/uWS/HTTPSocket.cpp src/uWS/Socket.cpp src/uWS/uUV.cpp)
+	set(sources src/main.cpp src/path.cpp src/classifier.cpp src/uWS/Extensions.cpp src/uWS/Group.cpp src/uWS/WebSocketImpl.cpp src/uWS/Networking.cpp src/uWS/Hub.cpp src/uWS/Node.cpp src/uWS/WebSocket.cpp src/uWS/HTTPSocket.cpp src/uWS/Socket.cpp src/uWS/uUV.cpp)
 
 endif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 
@@ -19,7 +19,7 @@ endif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
 
-set(sources src/main.cpp)
+set(sources src/main.cpp src/path.cpp src/classifier.cpp)
 
 include_directories(/usr/local/include)
 include_directories(/usr/local/opt/openssl/include)
