--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,4 @@ term2_sim_windows
 p9-pid-control/Thumbs.db
 p9-pid-control/pid_control_document.pdf
 p2-Traffic-Sign-Classifier/codes
+p-12-semantic-segmentation-deep-learning/data_road.zip
