--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,4 @@ p9-pid-control/pid_control_document.pdf
 p2-Traffic-Sign-Classifier/codes
 p-12-semantic-segmentation-deep-learning/data_road.zip
 p11/naive_bayes_cpp/a.exe
+tensorflow_vgg
