--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,4 @@ p2-Traffic-Sign-Classifier/codes
 p-12-semantic-segmentation-deep-learning/data_road.zip
 p11/naive_bayes_cpp/a.exe
 tensorflow_vgg
+p-11-path-planning/Anthony-p11.zip
