--- a/p-11-path-planning/CMakeLists.txt
+++ b/p-11-path-planning/CMakeLists.txt
@@ -2,11 +2,10 @@ project(Path_Planning)
 
 cmake_minimum_required (VERSION 3.5)
 
-add_definitions(-std=c++11)
+add_definitions(-std=gnu++14)
 
 set(CXX_FLAGS "-W1")
 set(CMAKE_CXX_FLAGS, "${CXX_FLAGS}")
-
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
     
@@ -16,25 +15,22 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 endif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 
 
-
 if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
 
-set(sources src/main.cpp src/path.cpp src/classifier.cpp src/behavior_planner.h)
-
-include_directories(/usr/local/include)
-include_directories(/usr/local/opt/openssl/include)
-link_directories(/usr/local/lib)
-link_directories(/usr/local/opt/openssl/lib)
-link_directories(/usr/local/Cellar/libuv/1.11.0/lib)
-
+	include_directories(/usr/local/include)
+	include_directories(/usr/local/opt/openssl/include)
+	link_directories(/usr/local/lib)
+	link_directories(/usr/local/opt/openssl/lib)
+	link_directories(/usr/local/Cellar/libuv/1.11.0/lib)
+	set(sources src/main.cpp src/path.cpp src/classifier.cpp src/behavior_planner.cpp)
 
 endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
 
 
 add_executable(path_planning ${sources})
 
+
 if(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Windows")
     target_link_libraries(path_planning z ssl uv uWS)
 endif(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-
 
