--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,4 @@ p-12-semantic-segmentation-deep-learning/data_road.zip
 p11/naive_bayes_cpp/a.exe
 tensorflow_vgg
 p-11-path-planning/Anthony-p11.zip
+p-12-semantic-segmentation-deep-learning/p12-deep-learning.zip
