work in progress

--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,6 @@ p11/naive_bayes_cpp/a.exe
 tensorflow_vgg
 p-11-path-planning/Anthony-p11.zip
 p-12-semantic-segmentation-deep-learning/p12-deep-learning.zip
+p-12-semantic-segmentation-deep-learning/runs/
+p-12-semantic-segmentation-deep-learning/logs/events.out.tfevents.1502131419.DESKTOP-V4CJITU
+p-12-semantic-segmentation-deep-learning/p12-deep-learning-2.zip
