--- a/p-11-path-planning/CMakeLists.txt
+++ b/p-11-path-planning/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_CXX_FLAGS, "${CXX_FLAGS}")
 if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
     
     set_source_files_properties(${sources} PROPERTIES COMPILE_FLAGS "-D_USE_MATH_DEFINES")
-	set(sources src/main.cpp src/path.cpp src/classifier.cpp src/behavior_planner.cpp src/uWS/Extensions.cpp src/uWS/Group.cpp src/uWS/WebSocketImpl.cpp src/uWS/Networking.cpp src/uWS/Hub.cpp src/uWS/Node.cpp src/uWS/WebSocket.cpp src/uWS/HTTPSocket.cpp src/uWS/Socket.cpp src/uWS/uUV.cpp)
+	set(sources src/main.cpp src/path.cpp src/MPC.cpp src/classifier.cpp src/behavior_planner.cpp src/uWS/Extensions.cpp src/uWS/Group.cpp src/uWS/WebSocketImpl.cpp src/uWS/Networking.cpp src/uWS/Hub.cpp src/uWS/Node.cpp src/uWS/WebSocket.cpp src/uWS/HTTPSocket.cpp src/uWS/Socket.cpp src/uWS/uUV.cpp)
 
 endif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 
@@ -22,15 +22,11 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 	link_directories(/usr/local/lib)
 	link_directories(/usr/local/opt/openssl/lib)
 	link_directories(/usr/local/Cellar/libuv/1.11.0/lib)
-	set(sources src/main.cpp src/path.cpp src/classifier.cpp src/behavior_planner.cpp)
-
+	
 endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
 
 
+set(sources src/main.cpp src/path.cpp src/classifier.cpp src/behavior_planner.cpp src/MPC.cpp)
+
 add_executable(path_planning ${sources})
-
-
-if(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-    target_link_libraries(path_planning z ssl uv uWS)
-endif(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-
+target_link_libraries(path_planning ipopt z ssl uv uWS)
